Added run instructions